route for search product and yaml update
